Avoid deprecated URL constructor in GeoRouter